# sup

./: .env.template  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  justfile  pyproject.toml  ruff.toml
.github/workflows/: lint.yml
frontend/: .gitignore  next.config.mjs  package.json  pnpm-lock.yaml
frontend/src/@core/: types.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: GenerateMenu.tsx  Providers.tsx
frontend/src/configs/: themeConfig.ts
frontend/src/views/: Login.tsx
src/: broker.py  config.py  create_admin.py  main.py
src/api/: __init__.py  exc_handlers.py
src/api/controllers/: __init__.py  category.py  comment.py  feature.py  health_check.py  meet.py  meet_participant.py  permission.py  permission_group.py  project.py  role.py  tag.py  task.py  user.py  workspace.py  workspace_invite.py
src/api/dependencies/: auth_helpers.py
src/api/dtos/: __init__.py  category.py  category_dtos.py  comment.py  feature.py  jwt.py  meet.py  meet_participant.py  permission.py  permission_group.py  project.py  project_dtos.py  role.py  role_dtos.py  tag.py  tag_dtos.py  task.py  user.py  workspace_dtos.py  workspace_invite_dtos.py
src/api/middlewares/: __init__.py  logging.py  update_tokens.py  workspace.py
src/apps/: __init__.py  base_exception.py
src/apps/auth/: __init__.py  dto.py  exceptions.py  jwt_service.py
src/apps/comment/: __init__.py  converters.py  dtos.py  exceptions.py  mapper.py  repository.py
src/apps/feature/: __init__.py  dtos.py  exceptions.py  mapper.py  query_parameters.py  repository.py  service.py
src/apps/meet/: __init__.py  dtos.py  exceptions.py  mappers.py  protocols.py  query_parameters.py  repositories.py  service.py  temp_dtos.py
src/apps/permission/: __init__.py  dtos.py  exceptions.py  permission_group_mapper.py  permission_mixin.py
src/apps/project/: dtos.py  exceptions.py  i_project_repository.py  mapper.py  project_repository.py
src/apps/send_mail/: exceptions.py  service.py  tasks.py
src/apps/task/: __init__.py  dtos.py  exceptions.py  mapper.py  query_parameters.py  repository.py
src/apps/user/: dtos.py  exceptions.py  protocols.py
src/data_access/: __init__.py  converters.py
src/data_access/converters/: category_converter.py  feature_converter.py  project_converter.py  role_converter.py  tag_converter.py  workspace_converter.py  workspace_invite_converter.py
src/data_access/mappers/: __init__.py  category_mapper.py  comment_mapper.py  feature_converter.py  feature_mapper.py  meet_converter.py  meet_mapper.py  permission_group_mapper.py  permission_mapper.py  project_mapper.py  role_mapper.py  tag_mapper.py  task_converter.py  task_mapper.py  user_mapper.py  workspace_invite_mapper.py  workspace_mapper.py
src/data_access/migrations/: env.py
src/data_access/models/: __init__.py  base.py  category.py  comment.py  feature.py  meet.py  meet_participants.py  mixins.py  models.py  permission.py  permission_group.py  project.py  project_participants.py  stubs.py  task.py  user.py  (+1 more)
src/providers/: __init__.py  adapters.py  context.py  usecases.py
src/utils/: __init__.py  case_converter.py
tests/fixtures/: workspace_fixtures.py
(+373 files in other folders)
