[tool.poetry]
name = "sup"
version = "0.1.0"
description = ""
authors = ["dromanov <dtdzhalaev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.113.0"
environs = "^10.3.0"
sqlalchemy = "2.0.25"
asyncpg = "^0.29.0"
structlog = "^24.1.0"
alembic = "^1.13.1"
redis = "^5.0.3"
dishka = "^1.2.0"
email-validator = "^2.2.0"
uvicorn = "^0.30.6"
greenlet = "^3.0.3"
passlib = "^1.7.4"
pyjwt = "^2.9.0"
types-redis = "^4.6.0.20240903"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
faker = "^24.4.0"
pytest-mock = "^3.14.0"
coverage = "^7.5.1"
mypy = "^1.8.0"
black = "^24.3.0"
isort = "^5.13.2"
deptry = "^0.12.0"
ruff = "^0.6.6"
pip-audit = "^2.7.0"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.3"
pre-commit = "^3.6.2"
types-redis = "^4.6.0.20240903"


[tool.black]
line-length = 100
exclude = "venv"
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
warn_redundant_casts = true
warn_unused_configs = true
strict_equality = true

[tool.ruff]
select = ["Q", "RUF001"]
fix = true

[tool.isort]
profile = "black"

[tool.deptry]
ignore = ["DEP002"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
